# SNL-Delft3D-CEC-Verify

./: .gitattributes  .gitignore  LICENSE.txt  README.md  environment.yml  index.html  pyproject.toml  setup.cfg  setup.py  tox.ini
.conda/: environment.yml
.conda/recipe/: meta.yaml
.github/workflows/: build.yml  ci.yml  conda.yml  docs.yml  package.yml  release.yml  static_type_checks.yml  unit_tests.yml
docs/: .gitignore  README.md  conf.py  index.rst  requirements.txt
docs/_assets/: gh-pages-readme.md  gh-pages-redirect.html  gh-pages-redirect.html.template
docs/_templates/: versioning.html
docs/api/: modules.rst  snl_d3d_cec_verify.copier.rst  snl_d3d_cec_verify.grid.rst  snl_d3d_cec_verify.report.rst  snl_d3d_cec_verify.result.rst  snl_d3d_cec_verify.rst  snl_d3d_cec_verify.text.rst
docs/validation/: index.rst
examples/: basic.py  basic_structured.py  comparison.py  examples.bib  grid_convergence.py  grid_convergence_structured.py  production.py  reference.docx  validation.py
main/: genindex.html  index.html  py-modindex.html  search.html  searchindex.js
main/api/: snl_d3d_cec_verify.copier.html  snl_d3d_cec_verify.grid.html  snl_d3d_cec_verify.html  snl_d3d_cec_verify.report.html  snl_d3d_cec_verify.result.html  (+2 more)
snl_d3d_cec_verify/: __init__.py  cases.py  copier.py  report.py  result.py  runner.py  template.py  text.py  types.py
src/: conftest.py
tests/: conftest.py  test_cases.py  test_copier.py  test_docs.py  test_grid.py  test_grid_shared.py  test_grid_structured.py  test_gridfm.py  test_paths.py  test_report.py  test_result.py  test_result_base.py  test_result_edges.py  test_result_faces.py  test_runner.py  test_template.py  test_text.py
v0.4.0/: genindex.html  index.html  objects.inv  py-modindex.html  search.html
v0.4.1/: genindex.html  index.html  py-modindex.html  search.html  searchindex.js
v0.4.2/: genindex.html  index.html  py-modindex.html  search.html
v0.4.3/: genindex.html  index.html  py-modindex.html  search.html
v0.5.0/: genindex.html  index.html  objects.inv  py-modindex.html  search.html
v0.5.1/: genindex.html  index.html  py-modindex.html  search.html  searchindex.js
v0.5.2/: genindex.html  index.html  py-modindex.html  search.html
v0.5.3/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
v0.6.0/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
v0.6.1/: genindex.html  index.html  py-modindex.html  search.html  searchindex.js
v0.7.0/: genindex.html  index.html  objects.inv  py-modindex.html  search.html
v0.8.0/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
v0.8.1/: genindex.html  index.html  py-modindex.html  search.html  searchindex.js
v0.8.2/: genindex.html  index.html  objects.inv  py-modindex.html  search.html
(+258 files in other folders)
