[metadata]
name = SNL-Delft3D-CEC-Verify
version = 0.5.0
author = Mathew Topper
author_email = mathew.topper@dataonlygreater.com
description = Automated verification of SNL-Delft3D-CEC based on the 2014 Mycek experiment
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/H0R5E/SNL-Delft3D-CEC-Verify
project_urls =
    Bug Tracker = https://github.com/H0R5E/SNL-Delft3D-CEC-Verify/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
zip_safe = False
package_dir =
    = src
packages = find:
python_requires = >=3.9, <3.10
install_requires =
    geopandas
    jinja2
    netCDF4
    numpy >=1.21
    pandas
    pyyaml
    scipy
    shapely
    tabulate
    xarray >=0.20.1

[options.package_data]
snl_d3d_cec_verify =
    templates/fm/input/*
    templates/fm/output/.empty
    result/mycek2014/*.yaml

[options.packages.find]
where = src

[coverage:run]
source = 
    src/snl_d3d_cec_verify
omit =
    src/snl_d3d_cec_verify/templates/*
